--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,22 +15,22 @@
 	// "postCreateCommand": "yarn install",
 
 	// Configure tool-specific properties.
-	"customizations": {
-		"vscode": {
-			"extensions": [
-				"esbenp.prettier-vscode",
-				"vscode-icons-team.vscode-icons",
-				"wayou.vscode-todo-highlight"
-			],
-			"settings": {
-				"editor.fontSize": 25,
-				"terminal.integrated.fontSize": 15,
-				"editor.wordWrap": "on"
-			}
+	// "customizations": {
+	// 	"vscode": {
+	// 		"extensions": [
+	// 			"esbenp.prettier-vscode",
+	// 			"vscode-icons-team.vscode-icons",
+	// 			"wayou.vscode-todo-highlight"
+	// 		],
+	// 		"settings": {
+	// 			"editor.fontSize": 25,
+	// 			"terminal.integrated.fontSize": 15,
+	// 			"editor.wordWrap": "on"
+	// 		}
 			
-		}
+	// 	}
 		
-	 }
+	//  }
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
